syntax = "proto3";

package actionpb;

option go_package = "./actionpb";

message PromptRequest {
    repeated string inspirationFiles = 1;
    string searchQuery = 2;
    string embedsCount = 3;
    string nCount = 4;
    bool disableIndex = 5;
    bool yes = 6;
}
